--- a/styles/index.css
+++ b/styles/index.css
@@ -143,12 +143,18 @@ hr {
 .conqcontainer {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  /* width: 100%; */
+  justify-content: center;
 }
 
 .liconq {
   transition: margin-left ease 0.5s;
   left: 0;
+  font-size: 2em;
+  padding-left: 0.4em;
 }
 
 .liconq:hover>.imgconq {
@@ -166,45 +172,45 @@ hr {
 
 .imgconq {
   z-index: 1;
-  /* left: -30; */
-  padding: 0;
-  margin-left: 0;
-  width: 0%;
+      /* left: -30; */
+      padding: 0;
+      margin-left: 0;
+      width: 0%;
 }
 
 .conqabout {
-  left: 20%;
+  display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .conqaboutcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  /* justify-content: center; */
-  /* padding-left: 10%; */
-  align-items: center;
-  /* flex-wrap: nowrap; */
-  /* height: 50%; */
-  min-height: 10%;
-  width: 50;
-  align-content: space-between;
-  left: 100%;
+      flex-direction: column;
+      justify-content: flex-end;
+
 }
 
 .conqinfo {
   display: flex;
   display: flex;
+  width: 30vw;
   align-content: center;
+  text-align: justify;
   flex-direction: column-reverse;
   justify-content: center;
 }
 
 .conq {
-  width: 500;
+  width: 40vw;
+  display: flex;
 }
 
 .ligrounded {
   transition: margin-left ease 0.5s;
   left: 0;
+  font-size: 2em;
+  padding-left: 0.4em;
 }
 
 .ligrounded:hover>.imggrounded {
@@ -232,7 +238,11 @@ hr {
 .groundedcontainer {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  /* width: 100%; */
+  justify-content: center;
 }
 
 .groundedaboutcontainer {
@@ -250,30 +260,39 @@ hr {
 }
 
 .groundedbout {
-  left: 20%;
+  width: 10vw;
 }
 
 .groundedinfo {
   display: flex;
   display: flex;
+  width: 30vw;
   align-content: center;
+  text-align: justify;
   flex-direction: column-reverse;
   justify-content: center;
 }
 
 .grounded {
-  width: 500;
+  width: 40vw;
+    display: flex;
 }
 
 .atgthrcontainer {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  /* width: 100%; */
+  justify-content: center;
 }
 
 .liatgthr {
   transition: margin-left ease 0.5s;
-  left: 0;
+left: 0;
+font-size: 2em;
+padding-left: 0.4em;
 }
 
 .liatgthr:hover>.imgatgthr {
@@ -299,7 +318,6 @@ hr {
 }
 
 .atgthrbout {
-  left: 20%;
 }
 
 .atgthrboutcontainer {
@@ -319,13 +337,16 @@ hr {
 .atgthrinfo {
   display: flex;
   display: flex;
+  width: 30vw;
   align-content: center;
+  text-align: justify;
   flex-direction: column-reverse;
   justify-content: center;
 }
 
 .atgthr {
-  width: 500;
+  width: 40vw;
+      display: flex;
 }
 
 .sicontainer {
@@ -393,13 +414,19 @@ hr {
 
 .talltalescontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+    flex-direction: row-reverse;
+    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    /* width: 100%; */
+    justify-content: center;
 }
 
 .litalltales {
   transition: margin-left ease 0.5s;
-  left: 0;
+      left: 0;
+      font-size: 2em;
+      padding-left: 0.4em;
 }
 
 .litalltales:hover>.imgtalltales {
@@ -434,31 +461,37 @@ hr {
   min-height: 10%;
   width: 50;
   align-content: space-between;
-  left: 100%;
-}
+  left: 100%;}
 
 .talltalesinfo {
   display: flex;
-  display: flex;
+  width: 30vw;
   align-content: center;
+  text-align: justify;
   flex-direction: column-reverse;
   justify-content: center;
 }
 
 .talltales {
-  width: 500;
+  width: 40vw;
+display: flex;
 }
 
 .metoocontainer {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  /* width: 100%; */
+  justify-content: center;
 }
 
 .limetoo {
   transition: margin-left ease 0.5s;
   left: 0;
-}
+  font-size: 2em;
+  padding-left: 0.4em;}
 
 .limetoo:hover>.imgmetoo {
   margin-left: 0px;
@@ -495,17 +528,20 @@ hr {
   left: 100%;
 }
 
+
 .metooinfo {
   display: flex;
-  display: flex;
-  align-content: center;
-  flex-direction: column-reverse;
-  justify-content: center;
-}
+      display: flex;
+      width: 30vw;
+      align-content: center;
+      text-align: justify;
+      flex-direction: column-reverse;
+      justify-content: center;}
 
 .metoo {
-  width: 500;
-}
+  width: 40vw;
+      display: flex;
+    }
 
 .emocontainer {
   display: flex;
@@ -541,16 +577,9 @@ hr {
 
 .emoboutcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
-  /* padding-left: 10%; */
-  align-items: center;
-  /* flex-wrap: nowrap; */
-  /* height: 50%; */
-  min-height: 10%;
-  width: 50;
-  align-content: space-between;
-  left: 100%;
+  flex-direction: column;
+  justify-content: flex-end;}
+
 }
 
 .emoinfo {
@@ -599,17 +628,9 @@ hr {
 
 .cutitboutcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
-  /* padding-left: 10%; */
-  align-items: center;
-  /* flex-wrap: nowrap; */
-  /* height: 50%; */
-  min-height: 10%;
-  width: 50;
-  align-content: space-between;
-  left: 100%;
-  deepin
+  flex-direction: column;
+  justify-content: flex-end;}
+
 }
 
 .cutitinfo {
@@ -627,12 +648,18 @@ hr {
 .deepincontainer {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
+  align-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  /* width: 100%; */
+  justify-content: center;
 }
 
 .lideepin {
   transition: margin-left ease 0.5s;
-  left: 0;
+    left: 0;
+    font-size: 2em;
+    padding-left: 0.4em;
 }
 
 .lideepin:hover>.imgdeepin {
@@ -673,24 +700,34 @@ hr {
 .deepininfo {
   display: flex;
   display: flex;
+  width: 30vw;
   align-content: center;
+  text-align: justify;
   flex-direction: column-reverse;
   justify-content: center;
 }
 
 .deepin {
-  width: 500;
+  width: 40vw;
+display: flex;
 }
 
 .alonecontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+    flex-direction: row-reverse;
+    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    /* width: 100%; */
+    justify-content: center;
+
 }
 
 .lialone {
   transition: margin-left ease 0.5s;
   left: 0;
+  font-size: 2em;
+  padding-left: 0.4em;
 }
 
 .lialone:hover>.imgalone {
@@ -730,25 +767,38 @@ hr {
 
 .aloneinfo {
   display: flex;
-  display: flex;
-  align-content: center;
-  flex-direction: column-reverse;
-  justify-content: center;
-}
+      display: flex;
+      width: 30vw;
+      align-content: center;
+      text-align: justify;
+      flex-direction: column-reverse;
+      justify-content: center;}
 
 .alone {
-  width: 500;
+  width: 40vw;
+  display: flex;
 }
 
+.aloneabout {
+  display: flex;
+flex-direction: column;
+justify-content: flex-end;
+}
 .wigcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+    flex-direction: row-reverse;
+    align-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    /* width: 100%; */
+    justify-content: center;
 }
 
 .liwig {
   transition: margin-left ease 0.5s;
-  left: 0;
+      left: 0;
+      font-size: 2em;
+      padding-left: 0.4em;
 }
 
 .liwig:hover>.imgwig {
@@ -788,14 +838,17 @@ hr {
 
 .wiginfo {
   display: flex;
-  display: flex;
-  align-content: center;
-  flex-direction: column-reverse;
-  justify-content: center;
+      display: flex;
+      width: 30vw;
+      align-content: center;
+      text-align: justify;
+      flex-direction: column-reverse;
+      justify-content: center;
 }
 
 .wig {
-  width: 500;
+  width: 40vw;
+      display: flex;
 }
 
 .omrcontainer {
@@ -858,14 +911,20 @@ hr {
 
 .heatcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+      flex-direction: row-reverse;
+      align-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      /* width: 100%; */
+      justify-content: center;
 }
 
 .liheat {
   transition: margin-left ease 0.5s;
-  left: 0;
-}
+      left: 0;
+      font-size: 2em;
+      padding-left: 0.4em;
+    }
 
 .liheat:hover>.imgheat {
   margin-left: 0px;
@@ -904,25 +963,34 @@ hr {
 
 .heatinfo {
   display: flex;
-  display: flex;
-  align-content: center;
-  flex-direction: column-reverse;
-  justify-content: center;
-}
+      display: flex;
+      width: 30vw;
+      align-content: center;
+      text-align: justify;
+      flex-direction: column-reverse;
+      justify-content: center;
+  }
 
 .heat {
-  width: 500;
-}
+  width: 40vw;
+      display: flex;
+  }
 
 .outcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+      flex-direction: row-reverse;
+      align-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      /* width: 100%; */
+      justify-content: center;
 }
 
 .liout {
   transition: margin-left ease 0.5s;
   left: 0;
+  font-size: 2em;
+  padding-left: 0.4em;
 }
 
 .liout:hover>.imgout {
@@ -958,7 +1026,10 @@ hr {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
+  /* padding-left: 10%; */
   align-items: center;
+  /* flex-wrap: nowrap; */
+  /* height: 50%; */
   min-height: 10%;
   width: 50;
   align-content: space-between;
@@ -967,15 +1038,16 @@ hr {
 
 .outinfo {
   display: flex;
-  display: flex;
-  align-content: center;
-  flex-direction: column-reverse;
-  justify-content: center;
-}
+      display: flex;
+      width: 30vw;
+      align-content: center;
+      text-align: justify;
+      flex-direction: column-reverse;
+      justify-content: center;}
 
 .out {
-  width: 500;
-}
+  width: 40vw;
+  display: flex;}
 
 .smoothcontainer {
   display: flex;
@@ -1042,13 +1114,18 @@ hr {
 
 .cymaticcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
-}
+      flex-direction: row-reverse;
+      align-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      /* width: 100%; */
+      justify-content: center;}
 
 .licymatic {
   transition: margin-left ease 0.5s;
   left: 0;
+  font-size: 2em;
+  padding-left: 0.4em;
 }
 
 .licymatic:hover>.imgcymatic {
@@ -1084,7 +1161,10 @@ hr {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
+  /* padding-left: 10%; */
   align-items: center;
+  /* flex-wrap: nowrap; */
+  /* height: 50%; */
   min-height: 10%;
   width: 50;
   align-content: space-between;
@@ -1093,26 +1173,33 @@ hr {
 
 .cymaticinfo {
   display: flex;
-  display: flex;
-  align-content: center;
-  flex-direction: column-reverse;
-  justify-content: center;
-}
+      display: flex;
+      width: 30vw;
+      align-content: center;
+      text-align: justify;
+      flex-direction: column-reverse;
+      justify-content: center;
+    }
 
 .cymatic {
-  width: 500;
+  width: 40vw;
+  display: flex;
 }
 
 .knowcontainer {
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
-}
+      flex-direction: row-reverse;
+      align-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      /* width: 100%; */
+      justify-content: center;}
 
 .liknow {
   transition: margin-left ease 0.5s;
   left: 0;
-  font-size: 30px;
+  font-size: 2em;
+  padding-left: 0.4em;
 }
 
 .liknow:hover>.imgknow {
@@ -1148,24 +1235,28 @@ hr {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
+  /* padding-left: 10%; */
   align-items: center;
+  /* flex-wrap: nowrap; */
+  /* height: 50%; */
   min-height: 10%;
   width: 50;
   align-content: space-between;
-  left: 100%;
-}
+  left: 100%; }
+
 
 .knowinfo {
   display: flex;
   display: flex;
+  width: 30vw;
   align-content: center;
+  text-align: justify;
   flex-direction: column-reverse;
-  justify-content: center;
-}
+  justify-content: center;}
 
 .know {
-  width: 500;
-}
+  width: 40vw;
+      display: flex;}
 
 a {
   color: black;
@@ -1270,26 +1361,27 @@ a:hover {
 display: flex;
 flex-wrap: wrap;
 padding: 0 4px;
-    justify-content: center;
+justify-content: center;
 }
 
 /* Create four equal columns that sits next to each other */
 .column {
 flex: 25%;
 max-width: 25%;
-padding: 0 4px;
+padding: 0 10px;
 }
 
 .column img {
-margin-top: 8px;
+margin-top: 3%;
 vertical-align: middle;
 width: 100%;
 }
 
 .column video {
-margin-top: 8px;
+margin-top: 0%;
 vertical-align: middle;
-width: 100%;
+width: 90%;
+height: 30%;
 }
 
 
@@ -1299,13 +1391,14 @@ width: 100%;
   flex: 50%;
   max-width: 50%;
 }
-
+}
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
 .column {
   flex: 100%;
   max-width: 100%;
+}
 }
 
 .cv {
