--- a/styles/styleswig.css
+++ b/styles/styleswig.css
@@ -20,9 +20,9 @@ body {
 
 .about {
   display: flex;
-    font-family: sans-serif;
-    justify-content: center;
-    width: 500px;
+  font-family: sans-serif;
+  justify-content: center;
+  width: 500px;
 }
 
 .home {
@@ -74,7 +74,6 @@ h2 {
   height: 707px;
 }
 
-
 .cv:hover {
   /* margin: 1%; */
   */: ;
@@ -120,7 +119,6 @@ h2 {
   border-width: 1.5px;
   border-style: solid;
   border-color: black;
-
 }
 
 .home:hover {
@@ -173,7 +171,6 @@ h1 {
   font-family: sans-serif;
 }
 
-
 h2 {
   display: inline-block;
   font-family: sans-serif;
@@ -200,44 +197,6 @@ ul {
   padding: 0;
 }
 
-.movingsword {
-  height: 505px;
-    width: 460px;
-}
-
-.movingthey {
-  height: 505px;
-      width: 460px;
-}
-
-.movingsept {
-  height: 465px;
-    width: 460px;
-}
-
-.movingqj {
-  height: 600px;
-width: 460px;
-margin-top: 1%;
-}
-
-#carousel {
-  width: 100%;
-      /* height: 100%; */
-      background-color: white;
-      overflow: auto;
-      white-space: nowrap;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      align-content: center;
-
-}
-
-#carousel .slide {
-  display: inline-block;
-}
-
 p {
   font-size: 15px;
   font-weight: normal;
@@ -256,8 +215,6 @@ p {
   width: 20%;
   height: 20%;
   margin-bottom: 5%;
-
-
 }
 
 video {
@@ -265,40 +222,26 @@ video {
   height: 100%;
 }
 
-.carouselcon {
-  width: 100%;
-  height: 90%;
-  display: flex;
-  align-items: center;
-
-}
-
 .imgdiv {
   display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
-
 
 .bottom {
   display: flex;
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
-
-
 a {
-
   color: black;
   text-decoration: none;
 }
 
 a:hover {
-
   color: black;
   text-decoration: underline;
-
 }
 
 a {
@@ -309,108 +252,98 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
 .bottom {
   display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content: flex-start;
-    flex-direction: row;
-    flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
 
-  }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 1;
+  height: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 100%;
+}
 
+.fa-linkedin {
+  background: #white;
+  color: black;
+}
 
-  .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 1;
-    height: 10px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 100%;
+.fa-instagram {
+  background: #white;
+  color: black;
+}
 
-  }
+.iconcon {
+  display: flex;
+  justify-content: flex-end;
+  width: 90%;
+}
 
-  .fa-linkedin {
-    background: #white;
-    color: black;
-  }
+.cv {
+  /* margin: 1%; */
+  */: ;
+  font-family: sans-serif;
+  background-color: white;
+  /* top: 0; */
+  /* right: 0; */
+  color: black;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
+  height: 50px;
+  border-radius: 20px;
+  align-items: center;
+  display: flex;
+  font-weight: bolder;
+  border-width: 1.5px;
+  border-style: solid;
+  border-color: black;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-content: flex-end;
+}
 
-  .fa-instagram {
-    background: #white;
-    color: black;
-  }
-
-  .iconcon {
-    display: flex;
-        justify-content: flex-end;
-        width: 90%;
-
-  }
-
-  .cv {
-    /* margin: 1%; */
-    */: ;
-    font-family: sans-serif;
-    background-color: white;
-    /* top: 0; */
-    /* right: 0; */
-    color: black;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 10px;
-    height: 50px;
-    border-radius: 20px;
-    align-items: center;
-    display: flex;
-    font-weight: bolder;
-    border-width: 1.5px;
-    border-style: solid;
-    border-color: black;
-    justify-content: flex-end;
-    flex-direction: row;
-    align-content: flex-end;
-  }
-
-
-  div.sticky {
-    position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-        padding: 0px;
-        margin: 2%;
-        z-index: 1;
-        font-family: sans-serif;
-        margin-left: 1%;
-        font-weight: normal;
-        display: flex;
-        letter-spacing: -10%;
-        margin-bottom: 0;
-        /* margin: 0; */
-        /* align-items: center;*/  }
-
-
-
-
-
-
-
-
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 0px;
+  margin: 2%;
+  z-index: 1;
+  font-family: sans-serif;
+  margin-left: 1%;
+  font-weight: normal;
+  display: flex;
+  letter-spacing: -10%;
+  margin-bottom: 0;
+  /* margin: 0; */
+  /* align-items: center;*/
+}
 
 /* The side navigation menu */
 .sidenav {
   height: 100%;
-      width: 0;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background-color: #111;
-      overflow-x: hidden;
-      padding-top: 60px;
-      transition: 0.5s;}
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
 
 /* The navigation menu links */
 .sidenav a {
@@ -439,20 +372,39 @@ a:hover {
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
   transition: margin-left .5s;
-      padding: 0 20px;
-
+  padding: 0 20px;
 }
 
 #main2 {
   transition: margin-left .5s;
-      padding: 0 20px;
-
+  padding: 0 20px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
 
 .head {
@@ -463,10 +415,6 @@ a:hover {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-
-}
-
-.aboutcontainer {
 }
 
 .opencon {
@@ -479,15 +427,13 @@ a:hover {
   height: 8%;
 }
 
-
 .material-symbols-outlined {
   font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48 }
-
-
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
 
 .container {
   display: flex;
@@ -495,36 +441,37 @@ a:hover {
   justify-content: center;
 }
 
-  .image-gallery {
-    /* Mobile first */
-    display: flex;
+.image-gallery {
+  /* Mobile first */
+  display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-  }
+  gap: 10px;
+}
 
-  .image-gallery .column {
-    flex-direction: column;
-    gap: 10px;
-  }
+.image-gallery .column {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
-  .image-item img {
-    width: 100%;
-    border-radius: 5px;
-    object-fit: cover;
-  }
+.image-item img {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
 
-  .image-item video {
-    width: 100%;
-    border-radius: 5px;
-    object-fit: cover;
-  }
+.image-item video {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
 
-  img {
-    border-radius: 5px;
-  }
+img {
+  border-radius: 5px;
+}
 
-  @media only screen and (min-width: 768px) {
-    .image-gallery {
-      flex-direction: row;
-    }
+@media only screen and (min-width: 768px) {
+  .image-gallery {
+    flex-direction: row;
   }
+}
