--- a/styles/stylesfuze.css
+++ b/styles/stylesfuze.css
@@ -263,6 +263,7 @@ p {
 video {
   width: 100%;
   height: 100%;
+
 }
 
 .carouselcon {
@@ -511,12 +512,27 @@ a:hover {
     width: 100%;
     border-radius: 5px;
     object-fit: cover;
+    display: flex;
+justify-content: center;
+flex-direction: column;
+align-content: center;
+align-items: center;
+
   }
 
   .image-item video {
     width: 100%;
     border-radius: 5px;
     object-fit: cover;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+justify-content: center;
+flex-direction: column;
+align-content: center;
+align-items: center;
+margin: 5%;
+
   }
 
   img {
