--- a/styles/out.css
+++ b/styles/out.css
@@ -20,9 +20,9 @@ body {
 
 .about {
   display: flex;
-    font-family: sans-serif;
-    justify-content: center;
-    width: 600px;
+  font-family: sans-serif;
+  justify-content: center;
+  width: 500px;
 }
 
 .home {
@@ -74,7 +74,6 @@ h2 {
   height: 707px;
 }
 
-
 .cv:hover {
   /* margin: 1%; */
   */: ;
@@ -120,7 +119,6 @@ h2 {
   border-width: 1.5px;
   border-style: solid;
   border-color: black;
-
 }
 
 .home:hover {
@@ -163,7 +161,6 @@ h1.title {
 }
 
 h1 {
-  margin: 0;
   font-size: 30px;
   letter-spacing: -1px;
   position: -webkit-sticky;
@@ -172,7 +169,6 @@ h1 {
   margin-right: 1%;
   font-family: sans-serif;
 }
-
 
 h2 {
   display: inline-block;
@@ -202,36 +198,35 @@ ul {
 
 .movingsword {
   height: 505px;
-    width: 460px;
+  width: 460px;
 }
 
 .movingthey {
   height: 505px;
-      width: 460px;
+  width: 460px;
 }
 
 .movingsept {
   height: 465px;
-    width: 460px;
+  width: 460px;
 }
 
 .movingqj {
   height: 600px;
-width: 460px;
-margin-top: 1%;
+  width: 460px;
+  margin-top: 1%;
 }
 
 #carousel {
   width: 100%;
-      /* height: 100%; */
-      background-color: white;
-      overflow: auto;
-      white-space: nowrap;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      align-content: center;
-
+  /* height: 100%; */
+  background-color: white;
+  overflow: auto;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
 }
 
 #carousel .slide {
@@ -256,8 +251,6 @@ p {
   width: 20%;
   height: 20%;
   margin-bottom: 5%;
-
-
 }
 
 video {
@@ -270,35 +263,28 @@ video {
   height: 90%;
   display: flex;
   align-items: center;
-
 }
 
 .imgdiv {
   display: flex;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
-
 
 .bottom {
   display: flex;
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
-
-
 a {
-
   color: black;
   text-decoration: none;
 }
 
 a:hover {
-
   color: black;
   text-decoration: underline;
-
 }
 
 a {
@@ -309,157 +295,98 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
 .bottom {
   display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content: flex-start;
-    flex-direction: row;
-    flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
 
-  }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 1;
+  height: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 100%;
+}
 
+.fa-linkedin {
+  background: #white;
+  color: black;
+}
 
-  .fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 1;
-    height: 10px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 100%;
+.fa-instagram {
+  background: #white;
+  color: black;
+}
 
-  }
-
-  .fa-linkedin {
-    background: #white;
-    color: black;
-  }
-
-  .fa-instagram {
-    background: #white;
-    color: black;
-  }
-
-  .iconcon {
-    display: flex;
-        justify-content: flex-end;
-        width: 90%;
-
-  }
-
-  .cv {
-    /* margin: 1%; */
-    */: ;
-    font-family: sans-serif;
-    background-color: white;
-    /* top: 0; */
-    /* right: 0; */
-    color: black;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 10px;
-    height: 50px;
-    border-radius: 20px;
-    align-items: center;
-    display: flex;
-    font-weight: bolder;
-    border-width: 1.5px;
-    border-style: solid;
-    border-color: black;
-    justify-content: flex-end;
-    flex-direction: row;
-    align-content: flex-end;
-  }
-
-
-  div.sticky {
-    position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-        padding: 0px;
-        margin: 2%;
-        z-index: 1;
-        font-family: sans-serif;
-        margin-left: 1%;
-        font-weight: normal;
-        display: flex;
-        letter-spacing: -10%;
-        margin-bottom: 0;
-        /* margin: 0; */
-        /* align-items: center;*/  }
-
-  .row {
+.iconcon {
   display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-  justify-content: center;
-}
-
-/* Create four equal columns that sits next to each other */
-.column {
-  flex: 25%;
-  max-width: 35%;
-  padding: 0 10px;
-}
-
-.column img {
-  margin-top: 3%;
-  vertical-align: middle;
-  width: 100%;
-}
-
-.column video {
-  margin-top: 0%;
-  vertical-align: middle;
+  justify-content: flex-end;
   width: 90%;
-  height: 30%;
 }
 
-.column video {
-  margin-top: 0%;
-  vertical-align: middle;
-  width: 90%;
-  height: 30%;
+.cv {
+  /* margin: 1%; */
+  */: ;
+  font-family: sans-serif;
+  background-color: white;
+  /* top: 0; */
+  /* right: 0; */
+  color: black;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
+  height: 50px;
+  border-radius: 20px;
+  align-items: center;
+  display: flex;
+  font-weight: bolder;
+  border-width: 1.5px;
+  border-style: solid;
+  border-color: black;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-content: flex-end;
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
-  }
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 0px;
+  margin: 2%;
+  z-index: 1;
+  font-family: sans-serif;
+  margin-left: 1%;
+  font-weight: normal;
+  display: flex;
+  letter-spacing: -10%;
+  margin-bottom: 0;
+  /* margin: 0; */
+  /* align-items: center;*/
 }
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
-
-
-
-
-
-
 
 /* The side navigation menu */
 .sidenav {
   height: 100%;
-      width: 0;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background-color: #111;
-      overflow-x: hidden;
-      padding-top: 60px;
-      transition: 0.5s;}
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
 
 /* The navigation menu links */
 .sidenav a {
@@ -488,20 +415,23 @@ a:hover {
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
   transition: margin-left .5s;
-      padding: 0 20px;
-
+  padding: 0 20px;
 }
 
 #main2 {
   transition: margin-left .5s;
-      padding: 0 20px;
-
+  padding: 0 20px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 .head {
@@ -512,11 +442,9 @@ a:hover {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-
 }
 
-.aboutcontainer {
-}
+.aboutcontainer {}
 
 .opencon {
   display: flex;
@@ -528,10 +456,137 @@ a:hover {
   height: 8%;
 }
 
-
 .material-symbols-outlined {
   font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48 }
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.image-gallery {
+  /* Mobile first */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 80%;
+}
+
+.image-gallery .column {
+  flex-direction: column;
+  gap: 10px;
+}
+
+.image-item img {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.image-item video {
+  width: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+img {
+  border-radius: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  .image-gallery {
+    flex-direction: row;
+
+  }
+}
+
+@media only screen and (min-width: 390px) {
+  .sticky {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  @media only screen and (min-width: 390px) {
+
+
+
+  }
+
+  @media only screen
+
+  /* iphone 13 */
+  and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+    .sticky {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: flex-start;
+    }
+
+    .head {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-left: 10%;
+    }
+
+    #main {
+      padding: 0;
+    }
+
+    .iconcon {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .cv {
+      position: ;
+      right: 3%;
+      top: 2%;
+    }
+
+    .about {
+      width: 100%;
+      text-align: center;
+      position: relative;
+      /* right: 50%; */
+      /* left: 50%; */
+    }
+
+    .aboutcontainer {
+      display: flex;
+      justify-content: center;
+      display: flex;
+      justify-content: center;
+      position: relative;
+      width: 85vw;
+      LEFT: 50%;
+      right: 50%;
+      margin-right: -50vw;
+      margin-left: -50vw;
+    }
+
+    h1 {
+      margin-bottom: 0;
+    }
+    .cover {
+      width: 100%;
+      height: 100%;
+    }
+  }
