--- a/styles/styleswig.css
+++ b/styles/styleswig.css
@@ -161,7 +161,6 @@ h1.title {
 }
 
 h1 {
-  margin: 0;
   font-size: 30px;
   letter-spacing: -1px;
   position: -webkit-sticky;
@@ -197,6 +196,43 @@ ul {
   padding: 0;
 }
 
+.movingsword {
+  height: 505px;
+  width: 460px;
+}
+
+.movingthey {
+  height: 505px;
+  width: 460px;
+}
+
+.movingsept {
+  height: 465px;
+  width: 460px;
+}
+
+.movingqj {
+  height: 600px;
+  width: 460px;
+  margin-top: 1%;
+}
+
+#carousel {
+  width: 100%;
+  /* height: 100%; */
+  background-color: white;
+  overflow: auto;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+
+#carousel .slide {
+  display: inline-block;
+}
+
 p {
   font-size: 15px;
   font-weight: normal;
@@ -220,6 +256,13 @@ p {
 video {
   width: 100%;
   height: 100%;
+}
+
+.carouselcon {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  align-items: center;
 }
 
 .imgdiv {
@@ -391,22 +434,6 @@ div.sticky {
   }
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
-  }
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
 .head {
   display: flex;
   align-content: center;
@@ -416,6 +443,8 @@ div.sticky {
   align-items: center;
   justify-content: center;
 }
+
+.aboutcontainer {}
 
 .opencon {
   display: flex;
@@ -435,13 +464,6 @@ div.sticky {
     'opsz' 48
 }
 
-/* Create four equal columns that sits next to each other */
-.column {
-flex: 25%;
-max-width: 35%;
-padding: 0 10px;
-}
-
 .container {
   display: flex;
   flex-direction: row;
@@ -453,10 +475,10 @@ padding: 0 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 80%;
 }
 
 .image-gallery .column {
-  display: flex;
   flex-direction: column;
   gap: 10px;
 }
@@ -480,5 +502,87 @@ img {
 @media only screen and (min-width: 768px) {
   .image-gallery {
     flex-direction: row;
+
   }
 }
+
+@media only screen and (min-width: 390px) {
+  .sticky {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  @media only screen and (min-width: 390px) {
+
+
+
+  }
+
+  @media only screen
+
+  /* iphone 13 */
+  and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+    .sticky {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: flex-start;
+    }
+
+    .head {
+      display: flex;
+      align-content: center;
+      top: 0;
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-left: 10%;
+    }
+
+    #main {
+      padding: 0;
+    }
+
+    .iconcon {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .cv {
+      position: ;
+      right: 3%;
+      top: 2%;
+    }
+
+    .about {
+      width: 100%;
+      text-align: center;
+      position: relative;
+      /* right: 50%; */
+      /* left: 50%; */
+    }
+
+    .aboutcontainer {
+      display: flex;
+      justify-content: center;
+      display: flex;
+      justify-content: center;
+      position: relative;
+      width: 75vw;
+      LEFT: 50%;
+      right: 50%;
+      margin-right: -70vw;
+      margin-left: -50vw;
+    }
+
+    h1 {
+      margin-bottom: 0;
+    }
+  }
